tests/negative/no_shadowing.ax
module no_shadowing;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let x: i32 = 1;
    let x: i32 = 2;
    return x;
}
